Old notebook updates.

--- a/paulssonlab/src/paulssonlab/shenker/matriarch/190320 Burst analysis.ipynb
+++ b/paulssonlab/src/paulssonlab/shenker/matriarch/190320 Burst analysis.ipynb
@@ -76,17 +76,14 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# from processing import *\n",
-    "# from trench_detection import *\n",
-    "# from trench_segmentation import *\n",
-    "# from trench_segmentation.watershed import *\n",
-    "# from util import *\n",
-    "# from ui import *\n",
-    "import common, trench_detection, util, data_io, processing\n",
-    "import ui, diagnostics, metadata\n",
-    "import workflow, image, geometry\n",
-    "import trench_detection.hough, trench_detection.core\n",
-    "import trench_segmentation.watershed"
+    "########\n",
+    "from matriarch import *\n",
+    "\n",
+    "# import common, trench_detection, util, data_io, processing\n",
+    "# import ui, diagnostics, metadata\n",
+    "# import workflow, image, geometry\n",
+    "# import trench_detection.hough, trench_detection.core\n",
+    "# import trench_segmentation.watershed"
    ]
   },
   {
@@ -139,10 +136,10 @@
     "# nd2_filenames = ['/n/scratch2/jqs1/fidelity/all/180405_txnerr002.stripe8.64m.nd2']\n",
     "\n",
     "# nd2_filenames = ['/n/scratch2/jqs1/fidelity/all/180405_txnerr002.stripe32.64m.nd2']\n",
+    "# nd2_filenames = ['/n/scratch2/jqs1/fidelity/all/180928_txnerr_bigsnake.stripe-1.256m.nd2']\n",
     "# nd2_filenames = ['/n/scratch2/jqs1/fidelity/all/TrErr.stripe-1.256m.nd2']\n",
-    "nd2_filenames = [\n",
-    "    \"/n/scratch2/jqs1/fidelity/all/180928_txnerr_bigsnake.stripe-1.256m.nd2\"\n",
-    "]"
+    "# nd2_filenames = ['/n/scratch2/jqs1/fidelity/all/TrErr002_Exp.nd2']\n",
+    "nd2_filenames = [\"/n/scratch2/jqs1/fidelity/all/181010_rpos_bigsnake.nd2\"]"
    ]
   },
   {
@@ -203,12 +200,12 @@
    "source": [
     "cluster = SLURMCluster(\n",
     "    queue=\"short\",\n",
-    "    walltime=\"06:00:00\",\n",
+    "    walltime=\"04:00:00\",\n",
     "    # job_extra=['-p transfer'],\n",
     "    # job_extra=['--cores-per-socket=8'],\n",
     "    # job_extra=['--exclude=compute-e-16-181,compute-e-16-186'],\n",
     "    # interface='ib0',\n",
-    "    memory=\"6GB\",  # TODO!!!\n",
+    "    memory=\"10GB\",  # TODO!!!\n",
     "    local_directory=\"/tmp\",\n",
     "    log_directory=\"/home/jqs1/projects/matriarch/log\",\n",
     "    cores=1,\n",
@@ -230,7 +227,16 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "cluster.scale(400)"
+    "cluster.scale(300)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "cluster.adapt(minimum=0, maximum=300)"
    ]
   },
   {
@@ -327,12 +333,7 @@
    "source": [
     "%%time\n",
     "# key = frame_stream.contents\n",
-    "key = (\n",
-    "    \"/n/scratch2/jqs1/fidelity/all/180928_txnerr_bigsnake.stripe-1.256m.nd2\",\n",
-    "    35,\n",
-    "    \"MCHERRY\",\n",
-    "    0,\n",
-    ")\n",
+    "key = (\"/n/scratch2/jqs1/fidelity/all/181010_rpos_bigsnake.nd2\", 35, \"MCHERRY\", 0)\n",
     "frame = workflow.get_nd2_frame(*key)\n",
     "find_trenches_diag = diagnostics.wrap_diagnostics(\n",
     "    trench_detection.find_trenches, ignore_exceptions=False, pandas=False\n",
@@ -346,7 +347,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "ui.show_plot_browser(trench_diag)"
+    "#%%output size=150\n",
+    "ui.show_plot_browser(trench_diag[\"label_2\"])"
    ]
   },
   {
@@ -387,7 +389,22 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "key2 = (\"/n/scratch2/jqs1/fidelity/all/180405_txnerr002.stripe1.nd2\", 271, \"MCHERRY\", 0)"
+    "# key = ('/n/scratch2/jqs1/fidelity/all/180405_txnerr002.stripe1.nd2', 271, 'MCHERRY', 0)\n",
+    "key = (\n",
+    "    \"/n/scratch2/jqs1/fidelity/all/181010_rpos_bigsnake.stripe-1.64m.nd2\",\n",
+    "    0,\n",
+    "    \"MCHERRY\",\n",
+    "    0,\n",
+    ")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "frame = workflow.get_nd2_frame(*key)"
    ]
   },
   {
@@ -397,7 +414,7 @@
    "outputs": [],
    "source": [
     "# plt.figure(figsize=(20,20))\n",
-    "plt.imshow(workflow.get_nd2_frame(*key))"
+    "plt.imshow(frame)"
    ]
   },
   {
@@ -407,7 +424,7 @@
    "outputs": [],
    "source": [
     "%%time\n",
-    "trenches = _get_trench_bboxes(*key)"
+    "trenches = do_find_trenches(*key)"
    ]
   },
   {
@@ -416,7 +433,27 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "trenches.tail()"
+    "%%time\n",
+    "diag = util.tree()\n",
+    "trenches = trench_detection.find_trenches(frame, diagnostics=diag)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "ui.show_plot_browser(diag)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "0"
    ]
   },
   {
@@ -485,6 +522,8 @@
    "outputs": [],
    "source": [
     "def filter_trenches(trenches):\n",
+    "    pitch = 20.9\n",
+    "    # pitch = 24\n",
     "    if trenches is None:\n",
     "        return None\n",
     "    #     good_trenches = trenches[((trenches[('diag', 'find_trench_lines.hough_2.peak_func.pitch')] - 24).abs() <= 1)\n",
@@ -493,7 +532,7 @@
     "    good_trenches = trenches[\n",
     "        (\n",
     "            (\n",
-    "                trenches[(\"diag\", \"find_trench_lines.hough_2.peak_func.pitch\")] - 20.9\n",
+    "                trenches[(\"diag\", \"find_trench_lines.hough_2.peak_func.pitch\")] - pitch\n",
     "            ).abs()\n",
     "            <= 1\n",
     "        )\n",
@@ -849,6 +888,7 @@
     "            # segmentation_func=None,\n",
     "            return_none=True,\n",
     "            write=True,\n",
+    "            priority=-10,\n",
     "        )\n",
     "        # analysis_futures[key] = analysis_future\n",
     "        all_analysis_futures[key] = analysis_future\n",
@@ -860,13 +900,13 @@
     "        do_save_trenches,\n",
     "        list(dict(sorted(trench_bboxes_futures.items())).values()),\n",
     "        trenches_filename,\n",
-    "        priority=10,\n",
+    "        priority=100,\n",
     "    )\n",
     "    trench_errs_filename = filename_func(\n",
     "        kind=\"trench_errs\", extension=\"pickle\", filename=filename\n",
     "    )\n",
     "    save_trench_err_futures[filename] = client.submit(\n",
-    "        do_serialize_to_disk, trench_err_futures, trench_errs_filename, priority=10\n",
+    "        do_serialize_to_disk, trench_err_futures, trench_errs_filename, priority=100\n",
     "    )\n",
     "# OPTIONALLY: stream analysis to master"
    ]
@@ -880,15 +920,6 @@
     "util.apply_map_futures(\n",
     "    client.gather, trench_bboxes_futures, predicate=lambda x: x.status == \"error\"\n",
     ")"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "client.restart()"
    ]
   },
   {
@@ -1006,7 +1037,7 @@
    "outputs": [],
    "source": [
     "util.apply_map_futures(\n",
-    "    client.cancel, all_analysis_futures, predicate=lambda x: x.status == \"finished\"\n",
+    "    client.gather, all_analysis_futures, predicate=lambda x: x.status == \"error\"\n",
     ")"
    ]
   },
@@ -1583,9 +1614,11 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "# ims = zarr.open_group(store=zarr.LMDBStore('/n/scratch2/jqs1/fidelity/all/180928_txnerr_bigsnake.stripe-1.256m.nd2.images/pos1157.zarr'))\n",
+    "# ims = zarr.open_group(store=zarr.LMDBStore('/n/scratch2/jqs1/fidelity/all/TrErr.stripe-1.256m.nd2.images/pos0.zarr'))\n",
     "ims = zarr.open_group(\n",
     "    store=zarr.LMDBStore(\n",
-    "        \"/n/scratch2/jqs1/fidelity/all/180928_txnerr_bigsnake.stripe-1.256m.nd2.images/pos1157.zarr\"\n",
+    "        \"/n/scratch2/jqs1/fidelity/all/TrErr002_Exp.nd2.images/pos110.zarr/\"\n",
     "    )\n",
     ")"
    ]
@@ -1605,7 +1638,92 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "plt.imshow(ims[\"raw\"][(1, 95)][\"MCHERRY\"][:, :, -10])"
+    "list(ims[\"raw\"][\"_frame\"].keys())"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "ary = np.asarray(ims[\"raw\"][1][60][\"MCHERRY\"])[:, :, :30]\n",
+    "plt.figure(figsize=(40, 5))\n",
+    "plt.imshow(np.hstack([ary[:, :, t] for t in range(ary.shape[2])]), cmap=\"OrRd_r\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "ary = np.asarray(ims[\"raw\"][1][58][\"YFP\"])[:, :, :30]\n",
+    "plt.figure(figsize=(40, 5))\n",
+    "plt.imshow(np.hstack([ary[:, :, t] for t in range(ary.shape[2])]))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "ary = np.asarray(ims[\"raw\"][1][58][\"BF\"])[:, :, :30]\n",
+    "plt.figure(figsize=(40, 5))\n",
+    "plt.imshow(np.hstack([ary[:, :, t] for t in range(ary.shape[2])]), cmap=\"gist_yarg\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "plt.figure(figsize=(40, 40))\n",
+    "# frame = workflow.get_nd2_frame('/n/scratch2/jqs1/fidelity/all/180928_txnerr_bigsnake.nd2', 15, 'YFP', 37)\n",
+    "# frame = workflow.get_nd2_frame('/n/scratch2/jqs1/fidelity/all/180928_txnerr_bigsnake.nd2', 1130, 'YFP', 47)\n",
+    "frame = workflow.get_nd2_frame(\n",
+    "    \"/n/scratch2/jqs1/fidelity/all/TrErr002_Exp.nd2\", 100, \"MCHERRY\", 47\n",
+    ")\n",
+    "# frame = workflow.get_nd2_frame('/n/scratch2/jqs1/fidelity/all/', 1130, 'MCHERRY', 47)\n",
+    "plt.imshow(frame, cmap=\"OrRd_r\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "plt.imshow(ims[\"raw\"][1][40][\"BF\"][:, :, 50])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "plt.imshow(ims[\"raw\"][\"_frame\"][\"MCHERRY\"][:, :, -10])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "list(ims[\"raw\"][2][60].keys())"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "plt.imshow(ims[\"raw\"][2][60][\"MCHERRY\"][:, :, -10])"
    ]
   },
   {
@@ -1860,7 +1978,152 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "labelwise_df"
+    "%%time\n",
+    "from concurrent import futures\n",
+    "from util import tqdm_auto\n",
+    "\n",
+    "\n",
+    "def _load_measurements(base_filename):\n",
+    "    labelwise_filename = base_filename + \".labelwise.parquet\"\n",
+    "    if not os.path.exists(labelwise_filename):\n",
+    "        return\n",
+    "    # labelwise_df = data_io.read_parquet(labelwise_filename, progress_bar=None)\n",
+    "    # open(labelwise_filename, 'rb').read()\n",
+    "    with pa.OSFile(labelwise_filename, \"rb\") as f:\n",
+    "        # res = f.read()\n",
+    "        # buf = f.read()\n",
+    "        # buf = f.read_buffer()\n",
+    "        res = pq.ParquetFile(f).read(use_pandas_metadata=True, use_threads=False)\n",
+    "        # res = res.to_pandas()\n",
+    "        # res = data_io.read_parquet(buf, progress_bar=None)\n",
+    "        # res = pq.read_pandas(buf)\n",
+    "        # res = data_io.read_parquet(f.read_buffer(), progress_bar=None)\n",
+    "    return\n",
+    "    # mask_labelwise_df = data_io.read_parquet(base_filename+'.mask_labelwise.parquet')\n",
+    "    # trenchwise_df = data_io.read_parquet(base_filename+'.trenchwise.parquet')\n",
+    "    # return labelwise_df#.to_pandas()\n",
+    "\n",
+    "\n",
+    "def load_measurements(filename, nthreads=False, progress_bar=tqdm_auto):\n",
+    "    tasks = []\n",
+    "    for i in range(100):\n",
+    "        base_filename = os.path.join(filename, \"pos{:d}\".format(i))\n",
+    "        tasks.append((_load_measurements, base_filename))\n",
+    "    if nthreads:\n",
+    "        ex = futures.ThreadPoolExecutor(max_workers=nthreads)\n",
+    "        completed_tasks = futures.as_completed([ex.submit(*t) for t in tasks])\n",
+    "        if progress_bar is not None:\n",
+    "            completed_tasks = progress_bar(completed_tasks, total=len(tasks))\n",
+    "        for future in completed_tasks:\n",
+    "            res = future.result()\n",
+    "            # print('>',res.iloc[0])\n",
+    "    else:\n",
+    "        if progress_bar is not None:\n",
+    "            tasks = progress_bar(tasks, total=len(tasks))\n",
+    "        for t in tasks:\n",
+    "            res = t[0](*t[1:])\n",
+    "    return\n",
+    "\n",
+    "\n",
+    "load_measurements(\n",
+    "    \"/home/jqs1/scratch/fidelity/all/180928_txnerr_bigsnake.stripe-1.256m.nd2.measurements\"\n",
+    ")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "%%time\n",
+    "from concurrent import futures\n",
+    "from util import tqdm_auto\n",
+    "\n",
+    "\n",
+    "def _load_measurements(base_filename, kind):\n",
+    "    labelwise_filename = base_filename + \".{}.parquet\".format(kind)\n",
+    "    if not os.path.exists(labelwise_filename):\n",
+    "        return\n",
+    "    with pa.OSFile(labelwise_filename, \"rb\") as f:\n",
+    "        res = pq.ParquetFile(f).read(use_pandas_metadata=True, use_threads=False)\n",
+    "    res = res.to_pandas()\n",
+    "    return res\n",
+    "    # labelwise_df = data_io.read_parquet(labelwise_filename, progress_bar=None)\n",
+    "    # mask_labelwise_df = data_io.read_parquet(base_filename+'.mask_labelwise.parquet')\n",
+    "    # trenchwise_df = data_io.read_parquet(base_filename+'.trenchwise.parquet')\n",
+    "    # return labelwise_df#.to_pandas()\n",
+    "\n",
+    "\n",
+    "def load_measurements(\n",
+    "    parquet_filename, kind, nthreads=False, progress_bar=tqdm_auto, filename=None\n",
+    "):\n",
+    "    positions = range(100)\n",
+    "    if progress_bar is not None:\n",
+    "        positions = progress_bar(positions, total=len(positions))\n",
+    "    res = {}\n",
+    "    for pos in positions:\n",
+    "        key = (filename, pos)\n",
+    "        base_filename = os.path.join(parquet_filename, \"pos{:d}\".format(pos))\n",
+    "        res[key] = _load_measurements(base_filename, kind)\n",
+    "    return res"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "labelwise_dfs = load_measurements(\n",
+    "    \"/home/jqs1/scratch/fidelity/all/180928_txnerr_bigsnake.stripe-1.256m.nd2.measurements\",\n",
+    "    \"labelwise\",\n",
+    "    filename=\"/home/jqs1/scratch/fidelity/all/180928_txnerr_bigsnake.stripe-1.256m.nd2\",\n",
+    ")\n",
+    "mask_labelwise_dfs = load_measurements(\n",
+    "    \"/home/jqs1/scratch/fidelity/all/180928_txnerr_bigsnake.stripe-1.256m.nd2.measurements\",\n",
+    "    \"mask_labelwise\",\n",
+    "    filename=\"/home/jqs1/scratch/fidelity/all/180928_txnerr_bigsnake.stripe-1.256m.nd2\",\n",
+    ")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "%%time\n",
+    "labelwise_df = pd.concat(labelwise_dfs)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "%%time\n",
+    "mask_labelwise_df = pd.concat(mask_labelwise_dfs)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "mask_labelwise_df.index = labelwise_df.index"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "%%time\n",
+    "labelwise_df = pd.concat([labelwise_df, mask_labelwise_df], axis=1)"
    ]
   },
   {
@@ -1987,10 +2250,9 @@
    "source": [
     "%%time\n",
     "# labelwise_selected = labelwise_df.loc[IDX['/n/scratch2/jqs1/fidelity/all/TrErr002_noBF.nd2',:],:]\n",
-    "labelwise_selected = labelwise_df.loc[\n",
-    "    IDX[\"/n/scratch2/jqs1/fidelity/all/180405_txnerr_loweronly_fast.nd2\", :], :\n",
-    "]\n",
-    "# labelwise_selected = labelwise_df.loc[IDX['/n/scratch2/jqs1/fidelity/all/180405_txnerr002.nd2.nd2',:],:]"
+    "# labelwise_selected = labelwise_df.loc[IDX['/n/scratch2/jqs1/fidelity/all/180405_txnerr_loweronly_fast.nd2',:],:]\n",
+    "# labelwise_selected = labelwise_df.loc[IDX['/n/scratch2/jqs1/fidelity/all/180405_txnerr002.nd2.nd2',:],:]\n",
+    "labelwise_selected = labelwise_df"
    ]
   },
   {
@@ -2010,6 +2272,15 @@
    "source": [
     "# col = 'YFP/p0.3'\n",
     "# trenchwise_yfp_bg = trenchwise_df[col].rename(col+'_trenchwise')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "labelwise_selected.index.names"
    ]
   },
   {
