--- a/paulssonlab/src/paulssonlab/eaton/trenchripper/Interactive_Kymograph.ipynb
+++ b/paulssonlab/src/paulssonlab/eaton/trenchripper/Interactive_Kymograph.ipynb
@@ -97,7 +97,11 @@
     "input_path_prefix = \"/n/scratch2/de64/full_pipeline_test/hdf5/fov_\"\n",
     "# kymo = tr.interactive.kymograph_interactive(input_path_prefix,[\"channel_BF\",\"channel_RFP\"],[12,45],t_subsample_step=5)\n",
     "kymo = tr.interactive.kymograph_interactive(\n",
-    "    input_path_prefix, [\"channel_RFP\"], [12], t_subsample_step=5\n",
+    "    input_path_prefix,\n",
+    "    [\"channel_BF\", \"channel_RFP\"],\n",
+    "    [12],\n",
+    "    t_subsample_step=5,\n",
+    "    orientation_detection=\"phase\",\n",
     ")\n",
     "imported_array_list = kymo.map_to_fovs(kymo.import_hdf5)\n",
     "\n",
@@ -222,7 +226,7 @@
     "    y_min_edge_dist=IntSlider(value=50, min=10, max=200, step=10),\n",
     "    padding_y=IntSlider(value=20, min=0, max=100, step=1),\n",
     "    trench_len_y=IntSlider(value=270, min=0, max=1000, step=10),\n",
-    "    top_orientation=IntSlider(value=0, min=0, max=1, step=1),\n",
+    "    orientation_detection=fixed(\"phase\"),\n",
     "    vertical_spacing=FloatSlider(value=0.9, min=0.0, max=2.0, step=0.01),\n",
     ")"
    ]
