--- a/paulssonlab/src/paulssonlab/deaton/trenchripper/Interactive_Kymograph.ipynb
+++ b/paulssonlab/src/paulssonlab/deaton/trenchripper/Interactive_Kymograph.ipynb
@@ -6,7 +6,10 @@
    "source": [
     "### Interactive Kymograph Code\n",
     "\n",
-    "Use this notebook to figure out the kymograph hyperparameters that are most appropriate for your dataset."
+    "Use this notebook to figure out the kymograph hyperparameters that are most appropriate for your dataset.\n",
+    "\n",
+    "\n",
+    "Maybe add some writing to file so I can pick up from where I left off?"
    ]
   },
   {
@@ -22,10 +25,12 @@
     "    interact_manual,\n",
     "    FloatSlider,\n",
     "    IntSlider,\n",
+    "    Dropdown,\n",
     ")\n",
     "import ipywidgets as widgets\n",
     "import matplotlib\n",
     "import warnings\n",
+    "import copy\n",
     "\n",
     "matplotlib.rcParams[\"figure.figsize\"] = [20, 10]\n",
     "warnings.filterwarnings(action=\"once\")"
@@ -98,7 +103,7 @@
     "# kymo = tr.interactive.kymograph_interactive(input_path_prefix,[\"channel_BF\",\"channel_RFP\"],[12,45],t_subsample_step=5)\n",
     "kymo = tr.interactive.kymograph_interactive(\n",
     "    input_path_prefix,\n",
-    "    [\"channel_BF\", \"channel_RFP\"],\n",
+    "    [\"channel_RFP\"],\n",
     "    [12],\n",
     "    t_subsample_step=5,\n",
     "    orientation_detection=\"phase\",\n",
@@ -143,14 +148,17 @@
    "outputs": [],
    "source": [
     "matplotlib.rcParams[\"figure.figsize\"] = [20, 10]\n",
-    "interact_manual(\n",
+    "\n",
+    "row_detection = interactive(\n",
     "    kymo.preview_y_precentiles,\n",
+    "    {\"manual\": True},\n",
     "    imported_array_list=fixed(imported_array_list),\n",
-    "    y_percentile=IntSlider(value=85, min=0, max=100, step=1),\n",
-    "    smoothing_kernel_y_dim_0=IntSlider(value=9, min=1, max=20, step=1),\n",
+    "    y_percentile=IntSlider(value=95, min=0, max=100, step=1),\n",
+    "    smoothing_kernel_y_dim_0=IntSlider(value=17, min=1, max=20, step=1),\n",
     "    triangle_nbins=IntSlider(value=50, min=10, max=200, step=10),\n",
-    "    triangle_scaling=FloatSlider(value=1.0, min=0.0, max=2.0, step=0.05),\n",
-    ")"
+    "    triangle_scaling=FloatSlider(value=1.6, min=0.0, max=2.0, step=0.05),\n",
+    ")\n",
+    "display(row_detection)"
    ]
   },
   {
@@ -168,15 +176,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "y_percentile = 95\n",
-    "smoothing_kernel_y_dim_0 = 17\n",
-    "\n",
-    "y_percentiles_smoothed_list = kymo.map_to_fovs(\n",
-    "    kymo.get_smoothed_y_percentiles,\n",
-    "    imported_array_list,\n",
-    "    y_percentile,\n",
-    "    (smoothing_kernel_y_dim_0, 1),\n",
-    ")"
+    "y_percentiles_smoothed_list = copy.copy(row_detection.result)"
    ]
   },
   {
@@ -217,8 +217,9 @@
    "outputs": [],
    "source": [
     "matplotlib.rcParams[\"figure.figsize\"] = [20, 10]\n",
-    "interact_manual(\n",
+    "y_cropping = interactive(\n",
     "    kymo.preview_y_crop,\n",
+    "    {\"manual\": True},\n",
     "    y_percentiles_smoothed_list=fixed(y_percentiles_smoothed_list),\n",
     "    imported_array_list=fixed(imported_array_list),\n",
     "    triangle_nbins=IntSlider(value=50, min=10, max=200, step=10),\n",
@@ -226,9 +227,12 @@
     "    y_min_edge_dist=IntSlider(value=50, min=10, max=200, step=10),\n",
     "    padding_y=IntSlider(value=20, min=0, max=100, step=1),\n",
     "    trench_len_y=IntSlider(value=270, min=0, max=1000, step=10),\n",
-    "    orientation_detection=fixed(\"phase\"),\n",
     "    vertical_spacing=FloatSlider(value=0.9, min=0.0, max=2.0, step=0.01),\n",
-    ")"
+    "    orientation_detection=Dropdown(\n",
+    "        options=[0, 1, \"phase\"], value=0, description=\"Orientation:\", disabled=False\n",
+    "    ),\n",
+    ")\n",
+    "display(y_cropping)"
    ]
   },
   {
@@ -246,30 +250,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "triangle_nbins = 50\n",
-    "triangle_scaling = 1.6\n",
-    "y_min_edge_dist = 50\n",
-    "padding_y = 50\n",
-    "trench_len_y = 110\n",
-    "top_orientation = 0\n",
-    "\n",
-    "trench_edges_y_lists = kymo.map_to_fovs(\n",
-    "    kymo.get_trench_edges_y,\n",
-    "    y_percentiles_smoothed_list,\n",
-    "    triangle_nbins,\n",
-    "    triangle_scaling,\n",
-    "    y_min_edge_dist,\n",
-    ")\n",
-    "row_num_list = kymo.map_to_fovs(kymo.get_row_numbers, trench_edges_y_lists)\n",
-    "cropped_in_y_list = kymo.map_to_fovs(\n",
-    "    kymo.crop_y,\n",
-    "    trench_edges_y_lists,\n",
-    "    row_num_list,\n",
-    "    imported_array_list,\n",
-    "    padding_y,\n",
-    "    trench_len_y,\n",
-    "    top_orientation,\n",
-    ")"
+    "cropped_in_y_list = copy.copy(y_cropping.result)"
    ]
   },
   {
@@ -309,17 +290,19 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "interact_manual(\n",
+    "trench_detection = interactive(\n",
     "    kymo.preview_x_percentiles,\n",
+    "    {\"manual\": True},\n",
     "    cropped_in_y_list=fixed(cropped_in_y_list),\n",
     "    t=IntSlider(value=0, min=0, max=cropped_in_y_list[0].shape[4] - 1, step=1),\n",
-    "    x_percentile=IntSlider(value=85, min=0, max=100, step=1),\n",
-    "    background_kernel_x=IntSlider(value=301, min=1, max=601, step=50),\n",
+    "    x_percentile=IntSlider(value=85, min=50, max=100, step=1),\n",
+    "    background_kernel_x=IntSlider(value=301, min=1, max=601, step=20),\n",
     "    smoothing_kernel_x=IntSlider(value=9, min=1, max=31, step=2),\n",
     "    otsu_nbins=IntSlider(value=50, min=10, max=200, step=10),\n",
     "    otsu_scaling=FloatSlider(value=1.0, min=0.0, max=2.0, step=0.01),\n",
     "    vertical_spacing=FloatSlider(value=0.9, min=0.0, max=2.0, step=0.01),\n",
-    ")"
+    ")\n",
+    "display(trench_detection)"
    ]
   },
   {
@@ -337,17 +320,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "x_percentile = 85\n",
-    "background_kernel_x = 301\n",
-    "smoothing_kernel_x = 9\n",
-    "\n",
-    "smoothed_x_percentiles_list = kymo.map_to_fovs(\n",
-    "    kymo.get_smoothed_x_percentiles,\n",
-    "    cropped_in_y_list,\n",
-    "    x_percentile,\n",
-    "    (background_kernel_x, 1),\n",
-    "    (smoothing_kernel_x, 1),\n",
-    ")"
+    "smoothed_x_percentiles_list = trench_detection.result"
    ]
   },
   {
@@ -381,13 +354,15 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "interact_manual(\n",
+    "midpoint_drift = interactive(\n",
     "    kymo.preview_midpoints,\n",
+    "    {\"manual\": True},\n",
     "    smoothed_x_percentiles_list=fixed(smoothed_x_percentiles_list),\n",
     "    otsu_nbins=IntSlider(value=50, min=10, max=200, step=10),\n",
     "    otsu_scaling=FloatSlider(value=1.0, min=0.0, max=2.0, step=0.01),\n",
     "    vertical_spacing=FloatSlider(value=0.8, min=0.0, max=2.0, step=0.01),\n",
-    ")"
+    ")\n",
+    "display(midpoint_drift)"
    ]
   },
   {
@@ -405,14 +380,14 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "otsu_nbins = 50\n",
-    "otsu_scaling = 0.7\n",
+    "all_midpoints_list, x_drift_list = midpoint_drift.result\n",
+    "\n",
+    "# otsu_nbins = 50\n",
+    "# otsu_scaling = 0.7\n",
     "\n",
     "\n",
-    "all_midpoints_list = kymo.map_to_fovs(\n",
-    "    kymo.get_all_midpoints, smoothed_x_percentiles_list, otsu_nbins, otsu_scaling\n",
-    ")\n",
-    "x_drift_list = kymo.map_to_fovs(kymo.get_x_drift, all_midpoints_list)"
+    "# all_midpoints_list = kymo.map_to_fovs(kymo.get_all_midpoints,smoothed_x_percentiles_list,otsu_nbins,otsu_scaling)\n",
+    "# x_drift_list = kymo.map_to_fovs(kymo.get_x_drift,all_midpoints_list)"
    ]
   },
   {
