--- a/paulssonlab/src/paulssonlab/eaton/trenchripper/Cluster_Notebook.ipynb
+++ b/paulssonlab/src/paulssonlab/eaton/trenchripper/Cluster_Notebook.ipynb
@@ -184,27 +184,36 @@
     "# kymo = tr.kymograph.kychunker(input_file_prefix=input_file_prefix,output_path=output_path,all_channels=all_channels,trench_len_y=110,padding_y=20,trench_width_x=20,\\\n",
     "#                  t_chunk=25,t_range=(0,400),y_percentile=90,y_min_edge_dist=50,smoothing_kernel_y=(17,1),triangle_nbins=50,triangle_scaling=1.2,\\\n",
     "#                  top_orientation=0,x_percentile=85,background_kernel_x=(301,1),smoothing_kernel_x=(9,1),otsu_nbins=50,otsu_scaling=0.7)\n",
+    "\n",
+    "# input_file_prefix = \"/n/scratch2/de64/full_pipeline_test/hdf5/fov_\"\n",
+    "# output_path = '/n/scratch2/de64/full_pipeline_test/kymo'\n",
+    "# all_channels = [\"channel_BF\",\"channel_RFP\"]\n",
+    "\n",
+    "# kymo = tr.kymograph.kychunker(input_file_prefix=input_file_prefix,output_path=output_path,all_channels=all_channels,trench_len_y=110,padding_y=20,trench_width_x=20,\\\n",
+    "#                  t_chunk=25,t_range=(0,-1),y_percentile=90,y_min_edge_dist=50,smoothing_kernel_y=(17,1),triangle_nbins=50,triangle_scaling=1.2,\\\n",
+    "#                  orientation_detection='phase',x_percentile=85,background_kernel_x=(301,1),smoothing_kernel_x=(9,1),otsu_nbins=50,otsu_scaling=0.7)\n",
+    "\n",
     "input_file_prefix = \"/n/scratch2/de64/full_pipeline_test/hdf5/fov_\"\n",
     "output_path = \"/n/scratch2/de64/full_pipeline_test/kymo\"\n",
-    "all_channels = [\"channel_BF\", \"channel_RFP\"]\n",
+    "all_channels = [\"channel_RFP\", \"channel_BF\"]\n",
     "\n",
     "kymo = tr.kymograph.kychunker(\n",
     "    input_file_prefix=input_file_prefix,\n",
     "    output_path=output_path,\n",
     "    all_channels=all_channels,\n",
-    "    trench_len_y=110,\n",
-    "    padding_y=20,\n",
-    "    trench_width_x=20,\n",
+    "    trench_len_y=270,\n",
+    "    padding_y=40,\n",
+    "    trench_width_x=30,\n",
     "    t_chunk=25,\n",
     "    t_range=(0, -1),\n",
-    "    y_percentile=90,\n",
+    "    y_percentile=95,\n",
     "    y_min_edge_dist=50,\n",
     "    smoothing_kernel_y=(17, 1),\n",
     "    triangle_nbins=50,\n",
-    "    triangle_scaling=1.2,\n",
-    "    orientation_detection=\"phase\",\n",
-    "    x_percentile=85,\n",
-    "    background_kernel_x=(301, 1),\n",
+    "    triangle_scaling=1.6,\n",
+    "    orientation_detection=0,\n",
+    "    x_percentile=95,\n",
+    "    background_kernel_x=(21, 1),\n",
     "    smoothing_kernel_x=(9, 1),\n",
     "    otsu_nbins=50,\n",
     "    otsu_scaling=0.7,\n",
