--- a/paulssonlab/src/paulssonlab/eaton/trenchripper/Cluster_Notebook.ipynb
+++ b/paulssonlab/src/paulssonlab/eaton/trenchripper/Cluster_Notebook.ipynb
@@ -4,7 +4,9 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## Kymograph Cluster Code"
+    "## Kymograph Cluster Code\n",
+    "\n",
+    "should I add a retry call by default?"
    ]
   },
   {
@@ -29,8 +31,9 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "# kymo_controller = tr.cluster.dask_controller(walltime='04:00:00',local=False,n_workers=40,memory='2GB')\n",
     "kymo_controller = tr.cluster.dask_controller(\n",
-    "    walltime=\"04:00:00\", local=False, n_workers=20, memory=\"2GB\"\n",
+    "    walltime=\"04:00:00\", local=False, n_workers=40, memory=\"4GB\"\n",
     ")\n",
     "kymo_controller.startdask()\n",
     "kymo_controller.daskcluster.start_workers()"
@@ -60,17 +63,8 @@
    "source": [
     "hdf5_extractor = tr.ndextract.hdf5_fov_extractor(\n",
     "    \"/n/scratch2/de64/full_pipeline_test/40x_Ph2_Test_1.5.nd2\",\n",
-    "    \"/n/scratch2/de64/full_pipeline_test/hdf5\",\n",
+    "    \"/n/scratch2/de64/full_pipeline_test\",\n",
     ")  ##find a more elegent way to do grids...."
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "hdf5_extractor.writemetadata()"
    ]
   },
   {
@@ -89,6 +83,16 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "hdf5_extractor.writemetadata()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# hdf5_extractor.writemetadata()\n",
     "kymo_controller.mapfovs(hdf5_extractor.extract_fov, fov_list)"
    ]
   },
@@ -107,8 +111,25 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "# hdf5_extractor.writemetadata()\n",
     "# hdf5_extractor.extract_fov(0)"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# test = tr.utils.pandas_hdf5_handler(\"/n/scratch2/de64/full_pipeline_test/metadata.hdf5\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   },
   {
    "cell_type": "markdown",
@@ -193,24 +214,23 @@
     "#                  t_chunk=25,t_range=(0,-1),y_percentile=90,y_min_edge_dist=50,smoothing_kernel_y=(17,1),triangle_nbins=50,triangle_scaling=1.2,\\\n",
     "#                  orientation_detection='phase',x_percentile=85,background_kernel_x=(301,1),smoothing_kernel_x=(9,1),otsu_nbins=50,otsu_scaling=0.7)\n",
     "\n",
-    "input_file_prefix = \"/n/scratch2/de64/full_pipeline_test/hdf5/fov_\"\n",
-    "output_path = \"/n/scratch2/de64/full_pipeline_test/kymo\"\n",
+    "\n",
+    "headpath = \"/n/scratch2/de64/full_pipeline_test\"\n",
     "all_channels = [\"channel_RFP\", \"channel_BF\"]\n",
     "\n",
     "kymo = tr.kymograph.kychunker(\n",
-    "    input_file_prefix=input_file_prefix,\n",
-    "    output_path=output_path,\n",
+    "    headpath=headpath,\n",
     "    all_channels=all_channels,\n",
     "    trench_len_y=270,\n",
     "    padding_y=40,\n",
     "    trench_width_x=30,\n",
     "    t_chunk=25,\n",
     "    t_range=(0, -1),\n",
-    "    y_percentile=95,\n",
+    "    y_percentile=90,\n",
     "    y_min_edge_dist=50,\n",
     "    smoothing_kernel_y=(17, 1),\n",
     "    triangle_nbins=50,\n",
-    "    triangle_scaling=1.6,\n",
+    "    triangle_scaling=1.60,\n",
     "    orientation_detection=0,\n",
     "    x_percentile=95,\n",
     "    background_kernel_x=(21, 1),\n",
@@ -226,17 +246,9 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "hdf5_extractor.metadata[\"channels\"]  ##these names should match my convention"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
     "# fov_list = list(range(15)) + list(range(67,80))\n",
-    "fov_list = list(range(20)) + list(range(60, 80))"
+    "# fov_list = list(range(20)) + list(range(60,80))\n",
+    "fov_list = list(range(0, 80))"
    ]
   },
   {
@@ -246,6 +258,24 @@
    "outputs": [],
    "source": [
     "kymo_controller.mapfovs(kymo.generate_kymograph, fov_list)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "kymo_controller.retry_failed()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "kymo.collect_metadata(fov_list, use_archive=False, overwrite_archive=True)"
    ]
   },
   {
@@ -261,8 +291,15 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "kymo.generate_kymograph(0)  ## figure out this error ##"
+    "kymo.generate_kymograph(40)"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   },
   {
    "cell_type": "code",
