eliminated some bugs, improved metadata handling for kymo and extraction.

--- a/paulssonlab/src/paulssonlab/deaton/trenchripper/Interactive_Kymograph.ipynb
+++ b/paulssonlab/src/paulssonlab/deaton/trenchripper/Interactive_Kymograph.ipynb
@@ -26,6 +26,7 @@
     "    FloatSlider,\n",
     "    IntSlider,\n",
     "    Dropdown,\n",
+    "    IntText,\n",
     ")\n",
     "import ipywidgets as widgets\n",
     "import matplotlib\n",
@@ -104,7 +105,7 @@
     "kymo = tr.interactive.kymograph_interactive(\n",
     "    input_path_prefix,\n",
     "    [\"channel_RFP\"],\n",
-    "    [12],\n",
+    "    [10, 20, 60, 79],\n",
     "    t_subsample_step=5,\n",
     "    orientation_detection=\"phase\",\n",
     ")\n",
@@ -139,6 +140,26 @@
     "\n",
     "\n",
     "Running the following widget will display the smoothed 1-D signal for each of your timepoints. In addition, the threshold value for each fov will be displayed as a red line."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "matplotlib.rcParams[\"figure.figsize\"] = [20, 10]\n",
+    "\n",
+    "channels, shape = kymo.get_image_params(0)\n",
+    "\n",
+    "interact(\n",
+    "    kymo.view_image,\n",
+    "    fov_idx=IntText(value=0, description=\"FOV number:\", disabled=False),\n",
+    "    t=IntSlider(value=0, min=0, max=shape[-1] - 1, step=1, continuous_update=False),\n",
+    "    channel=Dropdown(\n",
+    "        options=channels, value=channels[0], description=\"Channel:\", disabled=False\n",
+    "    ),\n",
+    ")"
    ]
   },
   {
@@ -251,6 +272,15 @@
    "outputs": [],
    "source": [
     "cropped_in_y_list = copy.copy(y_cropping.result)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "cropped_in_y_list[0].shape"
    ]
   },
   {
