New correction method

--- a/paulssonlab/src/paulssonlab/shenker/molecule-counting/190423 Analysis NAO.ipynb
+++ b/paulssonlab/src/paulssonlab/shenker/molecule-counting/190423 Analysis NAO.ipynb
@@ -113,24 +113,25 @@
     "traces = []\n",
     "rp_list = []\n",
     "rp_df = pd.DataFrame()\n",
-    "directory = (\n",
-    "    \"/n/scratch2/jqs1/fidelity/190313/fluorescence/190313_mkate_100ms_50pct_laser.nd2\"\n",
-    ")\n",
+    "directory = \"/n/scratch2/jqs1/fidelity/190326/190326_mkate_nochlor_wateragarpad_100ms_100pct_laser.nd2\"\n",
     "# directory =  '/n/scratch2/jqs1/fidelity/190313/fluorescence/190313_mkate_100ms_100pct_laser.nd2'\n",
-    "# directory = '/n/scratch2/jqs1/fidelity/190313/phase/190313_SB1_in_GFP_100ms_100pct_laser.nd2'\n",
+    "# directory = '/n/scratch2/jqs1/fidelity/190325/phase/SB1_mcherry_LBagarpad_100ms_100pct_laser/190313_SB1_mcherry_LBagarpad_100ms_100pct_laser.nd2'\n",
     "for i in d[directory].keys():\n",
-    "    if i not in np.arange(0, 0).astype(list):\n",
+    "    #     if i == 4:\n",
+    "    if i not in np.arange(9, 9).astype(list):\n",
     "        print(i)\n",
     "        #     measurements, regionprops, labels, img = d['/n/scratch2/jqs1/fidelity/190301/jqs_photobleach_100ms_de32_mkate2_000{:d}.nd2'.format(i)]\n",
     "        regionprops = d[directory][i][\"regionprops\"]\n",
     "        measurements = d[directory][i][\"traces\"]\n",
+    "        area = d[directory][i][\"regionprops\"][\"area\"]\n",
+    "\n",
     "        bg_trace = measurements[\"mean\"][0, :]\n",
     "        bg = np.nanmin(measurements[\"mean\"][1:], axis=1)\n",
     "        #         print(np.nanmin(measurements['mean'][1:],axis=1).shape)\n",
     "\n",
-    "        traces.append(measurements[\"mean\"][1:] - bg[:, np.newaxis])\n",
+    "        #         traces.append((measurements['mean'][1:] - 0*bg[:,np.newaxis])*area[:,np.newaxis])\n",
     "        #         traces.append(measurements['mean'][1:] - bg_trace)\n",
-    "        #         traces.append(measurements['mean'][1:])\n",
+    "        traces.append(measurements[\"mean\"][1:])\n",
     "\n",
     "        rp_list.append(regionprops)\n",
     "        print(measurements[\"mean\"][1:].shape)\n",
@@ -151,7 +152,14 @@
     "# data['bin'] = pd.Categorical().values\n",
     "# data['bin'] = np.arange(len(traces))\n",
     "\n",
-    "t_end = traces.shape[1] - 3"
+    "t_end = traces.shape[1] - 6\n",
+    "data[\"k\"] = data.apply(\n",
+    "    lambda y: (y.values[0] - y.values[t_end - 1])\n",
+    "    / np.sum(y[:t_end].values - y.values[t_end - 1]),\n",
+    "    axis=1,\n",
+    ").values\n",
+    "# cfit = data.apply(lambda y: curve_fit(func1, np.arange(0,y[:t_end].shape[0]), y[:t_end],p0=[y[0],.001,0])[0], axis=1).apply(lambda x: pd.Series(x,index=['I0','k','bg']))\n",
+    "# data[:t_end] = data[:t_end].values - cfit.bg.values[:,np.newaxis]"
    ]
   },
   {
@@ -163,9 +171,7 @@
     "%%output size=250\n",
     "# traces = measurements['mean']\n",
     "idxs = np.random.permutation(traces.shape[0])\n",
-    "downsample = (\n",
-    "    10  # set to 1 to show all traces (instead of 10%); this will make your browser slow\n",
-    ")\n",
+    "downsample = 100  # set to 1 to show all traces (instead odata.k.hist()f 10%); this will make your browser slow\n",
     "curves = [\n",
     "    {\"x\": np.arange(traces.shape[1]), \"y\": traces[i], \"i\": idxs[i]}\n",
     "    for i in range(traces.shape[0] // downsample)\n",
@@ -321,7 +327,7 @@
     "        data.area.median() - 2 * data.area.std(),\n",
     "        data.area.median() + 2 * data.area.std(),\n",
     "    ],\n",
-    "    0: [500, 1500],\n",
+    "    0: [500, 3000],\n",
     "}\n",
     "# prop_dict = {'area': [data.area.median() - 2*data.area.std(), data.area.median() + 2*data.area.std()],\n",
     "#               0: [800, 3000]}\n",
@@ -330,7 +336,7 @@
     "print(f\"Total number of cells used is {df.shape[0]} out of {data.shape[0]}\")\n",
     "pbar, mu, sigma2 = get_stats(df, thresh)\n",
     "\n",
-    "q = 1\n",
+    "q = 1 / 2\n",
     "# nu_df = nu_int(pbar,mu,sigma2,q)\n",
     "# print(nu_df)\n",
     "\n",
@@ -352,10 +358,11 @@
     "from astropy.stats.biweight import biweight_midvariance\n",
     "from scipy.optimize import curve_fit\n",
     "from scipy.optimize import least_squares\n",
+    "import seaborn as sns\n",
     "\n",
     "\n",
-    "def func1(x, a, b):\n",
-    "    return a * np.exp(-b * x)\n",
+    "def func1(x, a, b, c):\n",
+    "    return a * np.exp(-b * x) + c\n",
     "\n",
     "\n",
     "def func2(x, t, y):\n",
@@ -390,46 +397,37 @@
     "\n",
     "    #     print(type(y_tau))\n",
     "    #     y_tau = y*np.exp((k-kbar)*t)\n",
-    "    return pd.Series(y_tau)\n",
+    "    return row\n",
+    "\n",
+    "\n",
+    "def nl_correct(row):\n",
+    "    tpoints = np.arange(0, t_end)\n",
+    "    p, _ = curve_fit(func1, tpoints, row, p0=[row[0] - row.min(), 0.001, row.min()])\n",
+    "    #     return pd.Series(func1(tpoints,p[0],p[1],0))\n",
+    "    #     print(p[1])\n",
+    "    return (row - p[2]) * p[0] / row.iloc[0]\n",
     "\n",
     "\n",
     "def get_stats(df):\n",
-    "    #     x = np.arange(0,1000)\n",
-    "    #     k = df.apply(lambda f: np.polyfit(x[0:600],np.log(f[0:600]),1)[0],axis=1)\n",
-    "    #     k = df.apply(lambda f: np.nanmean((f.values[:-1] - f.values[1:])/(f.values[:-1])), axis=1)\n",
-    "    #     k_n = k.values - k.mean()\n",
-    "    #     k_n = np.random.normal(pb_noise,np.abs(pb_noise).mean()/4, pb_noise.shape)\n",
-    "    #     k_n = pb_noise\n",
-    "    #     y = trajectories.multiply(np.exp(k_n[:,np.newaxis]*timepoints[np.newaxis,:]))\n",
-    "    #     k = df.apply(lambda f: curve_fit(func, timepoints, f)[0][1], axis=1)\n",
-    "    #     df['k'] = df.apply(lambda f: curve_fit(func, timepoints, f, p0=[f[0],0])[0][1], axis=1)\n",
-    "    #     df['k'] = df.apply(lambda f: curve_fit(lambda x,b: func1(x,f[0],b), timepoints, f)[0], axis=1)\n",
-    "    #     df['k'] = df.apply(lambda y: (y.values[0] - y.values[-1])/np.sum(y.values),axis=1)\n",
-    "    #     df.sort_values(by=['k'], inplace=True)\n",
-    "    #     df = df.iloc[100:1900].copy()\n",
-    "    #     df.drop(columns=['k'], inplace=True)\n",
-    "    #     if N > 0:\n",
-    "    df_agg = df.groupby(\"bin\").mean()\n",
-    "    #     k_agg = df_agg.apply(lambda f: curve_fit(lambda x,b: func1(x,f[0],b), np.arange(t_end), f.values[:t_end])[0], axis=1)\n",
-    "    #         k_agg = df_agg.apply(lambda f: least_squares(func, [f[0],.008], loss='soft_l1', f_scale=.1,args=(t,f)).x[1], axis=1)\n",
-    "    k_agg = df_agg.apply(\n",
-    "        lambda y: (y.values[0] - y.values[t_end - 1]) / np.sum(y[:t_end].values), axis=1\n",
-    "    )\n",
-    "    df[\"k\"] = k_agg[df[\"bin\"]].values\n",
-    "    #     df = df[df.k < .008]\n",
-    "    y = df.apply(\n",
-    "        lambda f: tau_interp(\n",
-    "            f.values[:t_end], np.arange(t_end), np.nanmean(k_agg), f[\"k\"]\n",
-    "        ),\n",
-    "        axis=1,\n",
-    "    )\n",
-    "    #     else:\n",
-    "    #         y = df\n",
-    "    p = y.apply(lambda x: x / x[0], axis=1)\n",
+    "\n",
+    "    #     df_agg = df.groupby('bin').mean()\n",
+    "    #     k_agg = df_agg.apply(lambda y: (y.values[0] - y.values[t_end-1])/np.sum(y[:t_end].values),axis=1)\n",
+    "    #     df['k_agg'] = k_agg[df['bin']].values\n",
+    "    #     y = df.apply(lambda f: tau_interp(f.values[:t_end],np.arange(t_end),np.nanmean(k_agg),f['k_agg']),axis=1)\n",
+    "\n",
+    "    y = df.iloc[:, :t_end]\n",
+    "    #     y = y - 1.13*y.min(axis=1).mean()#[:,np.newaxis]\n",
+    "    y = y.apply(nl_correct, axis=1)\n",
+    "    print(y.shape)\n",
+    "    p = pd.DataFrame(y.values / y[0].values[:, np.newaxis])\n",
+    "\n",
     "    pbar = p.mean()\n",
     "    mu = y.mean()\n",
     "    sigma2 = (p - pbar) ** 2\n",
+    "    #     sigma2 -= sigma2[0]*pbar**2\n",
+    "    #     sigma2 = y.var() - y[0].var()*pbar**2\n",
     "\n",
+    "    #     sigma2 = pd.DataFrame(sigma2.values*y[0].values[:,np.newaxis])\n",
     "    return y, pbar, mu, sigma2\n",
     "\n",
     "\n",
@@ -448,28 +446,33 @@
     "    return pd.Series(nu_dict)\n",
     "\n",
     "\n",
-    "def fluct_plot(pbar, mu, sigma2, q=1):\n",
+    "def fluct_plot(pbar, mu, sigma2, y0, q=1):\n",
     "    #     print(hist_df)\n",
     "    #     print(f'Total number of cells is {np.sum(hist_df.values)}')\n",
     "\n",
     "    plt.figure(figsize=(12, 8))\n",
     "    cmap = cm.get_cmap(\"coolwarm\")\n",
-    "\n",
-    "    y = sigma2 * mu[0]\n",
+    "    y = pd.DataFrame(sigma2.values * y0.values[:, np.newaxis])\n",
+    "    #     y -= y.iloc[1]*pbar**2\n",
+    "    y = y.iloc[:, 1:]\n",
+    "    pbar = pbar.iloc[1:]\n",
+    "    ybar = y.mean(axis=0)\n",
+    "    ybar -= ybar.iloc[0] * pbar**2\n",
+    "    print(y.shape, pbar.shape)\n",
+    "    #     y = sigma2*mu[0]\n",
     "    y[np.isnan(y)] = 0\n",
     "\n",
     "    cq = -1 / (1 / 2 * q**2 - 1 / 3 * q**3)\n",
     "    #     cq = -1/(q*(1/2 - (2/3)*q**2))\n",
     "\n",
-    "    nu = np.nanmean(\n",
-    "        cq * simps(y.T.iloc[pbar.values > 1 - q].T, pbar.iloc[pbar.values > 1 - q])\n",
-    "    )\n",
+    "    #     nu = np.nanmean(cq*simps(y.T.iloc[pbar.values > 1-q].T,pbar.iloc[pbar.values > 1-q]))\n",
+    "    nu = cq * simps(ybar.T.iloc[pbar.values > 1 - q].T, pbar.iloc[pbar.values > 1 - q])\n",
     "    #     qind = (pbar.values > (1/2 - q)) & (pbar.values < (1/2 + q))\n",
     "    #     print(cq,pbar.iloc[qind],y.T.iloc[qind].T)\n",
     "    #     nu = np.nanmean(cq*simps(y.T.iloc[qind].T,pbar.iloc[qind]))\n",
     "\n",
     "    #     c = (name.left - imin)/(imax - imin)\n",
-    "    plt.scatter(1 - pbar, np.nanmean(y, axis=0), color=\"k\", label=\"Single-cell data\")\n",
+    "    plt.scatter(1 - pbar, ybar, color=\"k\", label=\"Single-cell data\")\n",
     "    #     plt.fill_between(1-pbar,np.nanmean(y,axis=0),alpha=.1,color='r')\n",
     "\n",
     "    p = np.linspace(0, 1, 1000)\n",
@@ -513,7 +516,39 @@
     "    plt.legend()\n",
     "\n",
     "\n",
-    "#     plt.ylim(bottom=0,top=.0004)"
+    "#     plt.ylim(bottom=0,top=.0004)\n",
+    "\n",
+    "\n",
+    "def kmaps(df):\n",
+    "    fig, axs = plt.subplots(nrows=1, ncols=2, figsize=(24, 12))\n",
+    "\n",
+    "    cmap = cm.get_cmap(\"coolwarm\")\n",
+    "\n",
+    "    fit_df = df[[\"centroid_x\", \"centroid_y\", \"k\", 0]].copy()\n",
+    "    fit_df[\"c_k\"] = (fit_df.k - fit_df.k.min()) / (fit_df.k.max() - fit_df.k.min())\n",
+    "    fit_df[\"c_I0\"] = (fit_df[0] - fit_df[0].min()) / (fit_df[0].max() - fit_df[0].min())\n",
+    "\n",
+    "    sns.regplot(\n",
+    "        data=fit_df,\n",
+    "        x=\"centroid_x\",\n",
+    "        y=\"centroid_y\",\n",
+    "        fit_reg=False,\n",
+    "        ax=axs[0],\n",
+    "        scatter_kws={\"color\": cmap(fit_df[\"c_k\"])},\n",
+    "    )\n",
+    "    sns.regplot(\n",
+    "        data=fit_df,\n",
+    "        x=\"centroid_x\",\n",
+    "        y=\"centroid_y\",\n",
+    "        fit_reg=False,\n",
+    "        ax=axs[1],\n",
+    "        scatter_kws={\"color\": cmap(fit_df[\"c_I0\"])},\n",
+    "    )\n",
+    "\n",
+    "    axs[0].set_xlim([0, 2000])\n",
+    "    axs[0].set_ylim([0, 2000])\n",
+    "    axs[1].set_xlim([0, 2000])\n",
+    "    axs[1].set_ylim([0, 2000])"
    ]
   },
   {
@@ -522,14 +557,112 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "df = filter_df(data, prop_dict)\n",
-    "y, pbar, mu, sigma2 = get_stats(df)\n",
-    "plt.semilogy(y.T.values[:, ::1])\n",
-    "q = 0.9\n",
-    "# nu_df = nu_int(pbar,mu,sigma2,q)\n",
-    "# print(nu_df)\n",
+    "import time\n",
     "\n",
-    "fluct_plot(pbar, mu, sigma2, q)"
+    "prop_dict = {\n",
+    "    \"area\": [\n",
+    "        data.area.median() - 2 * data.area.std(),\n",
+    "        data.area.median() + 2 * data.area.std(),\n",
+    "    ],\n",
+    "    0: [1000, 2500],\n",
+    "    t_end - 1: [0, 400],\n",
+    "    \"k\": [0.0075, 0.009],\n",
+    "}\n",
+    "# prop_dict = {'area': [data.area.median() - 2*data.area.std(), data.area.median() + 2*data.area.std()],\n",
+    "#              'k': [.0038,.004],\n",
+    "#               0: [4e4,1e5]}\n",
+    "# prop_dict = {'area': [data.area.median() - 2*data.area.std(), data.area.median() + 2*data.area.std()],\n",
+    "#               0: [1400, 2500], t_end-1: [50,300],\n",
+    "#              'k': [.007,.0085]}\n",
+    "# prop_dict = {'centroid_x': [850, 1250],\n",
+    "#              'centroid_y': [750, 1150],\n",
+    "#              'area': [data.area.median() - 2*data.area.std(), data.area.median() + 2*data.area.std()],\n",
+    "#              0: [500, 3000]}\n",
+    "\n",
+    "df = filter_df(data, prop_dict)\n",
+    "df.k.hist(bins=30)\n",
+    "\n",
+    "\n",
+    "y, pbar, mu, sigma2 = get_stats(df)\n",
+    "\n",
+    "\n",
+    "plt.figure(figsize=(12, 8))\n",
+    "plt.semilogy(y.T.values[:, ::20] + 1)\n",
+    "plt.ylim(bottom=1)\n",
+    "\n",
+    "q = 0.7\n",
+    "\n",
+    "\n",
+    "fluct_plot(pbar, mu, sigma2, y[0], q)\n",
+    "\n",
+    "kmaps(df)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "from scipy.stats import linregress\n",
+    "from mpl_toolkits.mplot3d import Axes3D\n",
+    "import seaborn as sns\n",
+    "\n",
+    "# plt.figure(figsize=(12,8))\n",
+    "\n",
+    "# ax = fig.add_subplot(111, projection='3d')\n",
+    "fig, axs = plt.subplots(nrows=1, ncols=2, figsize=(24, 12))\n",
+    "\n",
+    "cmap = cm.get_cmap(\"coolwarm\")\n",
+    "\n",
+    "\n",
+    "fit_df = df[[\"centroid_x\", \"centroid_y\", \"k\", 0]].copy()\n",
+    "# fit_df = fit_df[fit_df[0] > 1000]\n",
+    "# fit_df = fit_df[fit_df['k'] < .003]\n",
+    "\n",
+    "fit_df[\"c_k\"] = (fit_df.k - fit_df.k.min()) / (fit_df.k.max() - fit_df.k.min())\n",
+    "fit_df[\"c_I0\"] = (fit_df[0] - fit_df[0].min()) / (fit_df[0].max() - fit_df[0].min())\n",
+    "\n",
+    "print(\"plotting!\")\n",
+    "sns.regplot(\n",
+    "    data=fit_df,\n",
+    "    x=\"centroid_x\",\n",
+    "    y=\"centroid_y\",\n",
+    "    fit_reg=False,\n",
+    "    ax=axs[0],\n",
+    "    scatter_kws={\"color\": cmap(fit_df[\"c_k\"])},\n",
+    ")\n",
+    "sns.regplot(\n",
+    "    data=fit_df,\n",
+    "    x=\"centroid_x\",\n",
+    "    y=\"centroid_y\",\n",
+    "    fit_reg=False,\n",
+    "    ax=axs[1],\n",
+    "    scatter_kws={\"color\": cmap(fit_df[\"c_I0\"])},\n",
+    ")\n",
+    "\n",
+    "\n",
+    "# sns.plt.show()\n",
+    "\n",
+    "# for x, y, c_k, c_I0 in zip(fit_df.centroid_x, fit_df.centroid_y, fit_df.c_k, fit_df.c_I0):\n",
+    "# #     print(x,y,c)\n",
+    "#     axs[0].scatter(x,y,color=cmap(c_k))\n",
+    "#     axs[1].scatter(x,y,color=cmap(c_I0))\n",
+    "\n",
+    "axs[0].set_xlim([0, 2000])\n",
+    "axs[0].set_ylim([0, 2000])\n",
+    "axs[1].set_xlim([0, 2000])\n",
+    "axs[1].set_ylim([0, 2000])\n",
+    "\n",
+    "# m_list = []\n",
+    "# for i in range(traces.shape[0]):\n",
+    "#     y = np.log10(traces[i]-bg_trace)\n",
+    "\n",
+    "#     m, b = np.polyfit(x[:-3],y[:-3],1)\n",
+    "#     m_list.append(m)\n",
+    "# # plt.plot(x,y)\n",
+    "# plt.hist(m_list,bins=30)\n",
+    "# print(np.mean(m_list))"
    ]
   },
   {
@@ -677,60 +810,6 @@
     "I0 = traces[:, 0]\n",
     "plt.hist(I0, bins=30)\n",
     "print(np.mean(I0), np.std(I0))"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "from scipy.stats import linregress\n",
-    "from mpl_toolkits.mplot3d import Axes3D\n",
-    "\n",
-    "fig, axs = plt.subplots(nrows=1, ncols=2, figsize=(24, 12))\n",
-    "# ax = fig.add_subplot(111, projection='3d')\n",
-    "\n",
-    "cmap = cm.get_cmap(\"coolwarm\")\n",
-    "\n",
-    "traces = df.iloc[:, :t_end]\n",
-    "x = np.arange(0, bg_trace.shape[0] - 3)\n",
-    "x = np.array([x for i in range(traces.shape[0])])\n",
-    "y = np.log10(traces.values[:, :-3] + 1)\n",
-    "fit_list = []\n",
-    "for i in range(y.shape[0]):\n",
-    "    #     print(x[i].shape, y[i].shape)\n",
-    "    m, b, r, p, sigma = linregress(x[i], y[i])\n",
-    "    #     print(m,r)\n",
-    "    x_coord, y_coord = df.iloc[i].centroid_x, df.iloc[i].centroid_y\n",
-    "    #     slopes[(x_coord,y_coord)] = m\n",
-    "    #     r2[(x_coord,y_coord)] = r**2\n",
-    "    fit_list.append([x_coord, y_coord, m, r**2])\n",
-    "# print(np.min(r2.values()))\n",
-    "fit_df = pd.DataFrame(fit_list, columns=[\"x\", \"y\", \"m\", \"r2\"])\n",
-    "fit_df = fit_df.dropna()\n",
-    "fit_df[\"c_r2\"] = (fit_df.r2 - fit_df.r2.min()) / (1 - fit_df.r2.min())\n",
-    "fit_df[\"c_m\"] = (fit_df.m - fit_df.m.min()) / (fit_df.m.max() - fit_df.m.min())\n",
-    "\n",
-    "print(\"plotting!\")\n",
-    "for x, y, c_r2, c_m in zip(fit_df.x, fit_df.y, fit_df.c_r2, fit_df.c_m):\n",
-    "    #     print(x,y,c_r2)\n",
-    "    axs[0].scatter(x, y, color=cmap(c_r2))\n",
-    "    axs[1].scatter(x, y, color=cmap(c_m))\n",
-    "\n",
-    "axs[0].set_xlim([0, 2000])\n",
-    "axs[0].set_ylim([0, 2000])\n",
-    "axs[1].set_xlim([0, 2000])\n",
-    "axs[1].set_ylim([0, 2000])\n",
-    "# m_list = []\n",
-    "# for i in range(traces.shape[0]):\n",
-    "#     y = np.log10(traces[i]-bg_trace)\n",
-    "\n",
-    "#     m, b = np.polyfit(x[:-3],y[:-3],1)\n",
-    "#     m_list.append(m)\n",
-    "# # plt.plot(x,y)\n",
-    "# plt.hist(m_list,bins=30)\n",
-    "# print(np.mean(m_list))"
    ]
   },
   {
